# cmn-substrate

./: .gitignore  Cargo.toml  README.md  clippy.toml  cmn-spec  spore.core.json
.github/workflows/: ci.yml
scripts/: upgrade.sh
src/: lib.rs  util.rs
src/archive/: mod.rs  zstd_codec.rs
src/client/: domain.rs  mod.rs  synapse.rs
src/crypto/: hash.rs  hub.rs  key.rs  mod.rs  signature.rs
src/model/: cmn.rs  format.rs  mod.rs  mycelium.rs  spore.rs  taste.rs  trust.rs
src/schemas/: README.md  cmn.json  mod.rs  mycelium.json  spore-core.json  spore.json  taste.json
src/tree/: blob_tree_blake3_nfc.rs  mod.rs  walk.rs
src/uri/: cmn.rs  domain.rs  mod.rs  url.rs
tests/: archive_test.rs  client_test.rs  conformance_vectors.rs  model_parse.rs  wasm.rs
tests/conformance/: README.md  check_manifest.py  manifest.json
tests/conformance/vectors/: algorithm_registry.json  blob_tree_blake3_nfc.json  bond_traversal.json  capsule.json  key_rotation.json  mycelium.json  signature.json  spore.json  strain.json  substrate.json  taste.json  taste_gating.json  uri.json
