[package]
name = "cmn-substrate"
version = "0.3.1"
edition = "2021"
description = "The shared Rust library for CMN — data models, cryptographic verification, tree hashing, URI parsing, and JSON-schema validation used by Hypha and Synapse."
license = "MIT"
repository = "https://github.com/cmnspore/cmn-substrate"
readme = "README.md"
keywords = ["cmn", "content-addressing", "ed25519", "blake3", "merkle-tree"]
categories = ["cryptography", "data-structures"]
exclude = [".github/", "tests/conformance/"]

[features]
default = []
client = ["dep:reqwest"]
client-safe-dns = ["client", "dep:tokio"]
archive-ruzstd = ["dep:tar", "dep:ruzstd"]
archive-zstd = ["dep:tar", "dep:zstd"]

[lib]
name = "substrate"
path = "src/lib.rs"

[dependencies]
agent-first-slug = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_jcs = "0.2"
anyhow = "1.0"
blake3 = "1.8"
bs58 = "0.5"
data-encoding = "2"
ed25519-dalek = "3.0"
unicase = "2.9"
unicode-normalization = "0.1"
jsonschema = { version = "0.48", default-features = false }
chrono = "0.4"
url = "2.5"
tar = { version = "0.4", optional = true }
ruzstd = { version = "0.8", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.27"
ignore = "0.4"
wasm-bindgen-test = "0.3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
